Some changes are backward incompatible and may require code change in the project. They are listed here as well.

==== Release 5_3_0 ...in progress

.Major new features:

. Support for ECMA6
* Introduced Babel to transpile for usage in Internet Explorer
* Adjusted js loader for IE
* Using 'strict' mode now in all JS sources

. Components: Scorecard, Cube, Charts, Export
* added CubeContextMenu hard toggle column sort
* Charts support for dark themes
* Charts removed some chart background grid elements for less crowded charts
* Renderer doesn't need an existing targetHtml nor defining one at all on creation. Member function setTargetHtml can be used to set and change target.
The Renderer either works directly with the specified element or (in case of specified via id) does an element lookup by id.
* Excel Report export moved to client side using FileSaver.js
* Remove client refresh on detail export which is not needed. Change context menu action from
    <JavaScriptAction>bcdui._migPjs._$(this.eventSrcElement).trigger("cubeActions:contextMenuCubeClientRefresh", {actionId: 'exportWysiwygAsExcel'})</JavaScriptAction>
    to
    <JavaScriptAction>bcdui._migPjs._$(this.eventSrcElement).trigger("cubeActions:reportExport")</JavaScriptAction>

. Widgets
* periodChooser got new options: useSimpleXPath to use a straight forward xpath, autoPopup to directly show the popup calendar and suppressButtons to not show any buttons at all, showClearButton to allow cleaning of input
* createFilterTableHeader function to add a filter header on a renderer. Uses createTableHeadFilter function which can be reused for other header filters (like grid) 
* enableNavPath attribute to turn on/off navPath linkage (default is off (false))
* New widget: "slider", based on noUiSlider implementation
* Context menu: added support for multi-context, i.e. <div contextId="is-editable is-removable"></div>