@@ -16,12 +16,13 @@ Some changes are backward incompatible and may require code change in the projec
 * Using 'strict' mode now in all JS sources
 
 . Components: Scorecard, Cube, Charts, Export
-* added CubeContextMenu hard toggle column sort
+* reorganized CubeContextMenu and added hard toggle column sort
 * Charts support for dark themes
 * Charts removed some chart background grid elements for less crowded charts
 * Renderer doesn't need an existing targetHtml nor defining one at all on creation. Member function setTargetHtml can be used to set and change target.
 The Renderer either works directly with the specified element or (in case of specified via id) does an element lookup by id.
 * Excel Report export moved to client side using FileSaver.js
+* Detail Export got column chooser options, check exportMode attribute for a customized column export/save selection 
 * Remove client refresh on detail export which is not needed. Change context menu action from
     <JavaScriptAction>bcdui._migPjs._$(this.eventSrcElement).trigger("cubeActions:contextMenuCubeClientRefresh", {actionId: 'exportWysiwygAsExcel'})</JavaScriptAction>
     to
@@ -48,6 +49,7 @@ The Renderer either works directly with the specified element or (in case of spe
 * new pageEffect bcdEffectPageStickyFooter
 
 . Security
+* added implicit subjectFilter bcd_userId:userId with fixed filter value
 * client-controlled subject filters
 ** the new servlet-filter de.businesscode.bcdui.web.filters.SubjectSettingsFilter allows setting subject filters from client
 ** client-controlled subject filters can be set from client via bcdui.util.security API
@@ -68,6 +70,7 @@ The Renderer either works directly with the specified element or (in case of spe
 * HTML Custom Elements for Safari was broken, after Safari switched to Webcomponents API v1
 
 .Backward Incompatibilities:
+* bcd_virtualFileSystem got additional columns updatedBy, last_update, bcd_userId with additional writebacks and security constraints and a new additional key column
 * Component: cube/scorecard blindUpDowns, ranking require new i18n keys (bcd_Rank_, bcd_Sc_Blind_, bcd_Cb_Blind_)
 * Charts: Moved VML drawer to BCD-UI-DE
 * Updated 3rd party jars (apache commons etc) to latest versions
